--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/style.css" rel="stylesheet">
     <title>Reservia</title>
 </head>
 
 <body>
     <header>
-        <img src="../css/images/logo/Reservia.svg" alt="">
+        <img src="../css/images/logo/Reservia.svg" alt="logo reservia" id="logo">
+        <nav>
+            <ul class="menu">
+                <li><a href='#'>Hébergement</a></li>
+                <li><a href='#'>Activités</a></li>
+                <li><a href='#'>S'inscrire</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 
