search bar / first section + local icons

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,64 @@
             </ul>
         </nav>
     </header>
+    <section class="searchBar">
+        <div class="above">
+            <h1>
+                Trouvez votre hébergement pour des vacances de rêve
+            </h1>
+            <p>
+                En plein centre ville ou en pleine nature
+            </p>
+        </div>
+        <div class="bar">
+            <button class="searchButton">
+                <img src="../css/images/icons/map-marker.svg" class="marker">
+            </button>
+            <input type="text" class="searchTerm" placeholder="Où aller ?">
+            <button class="searchButtonEnd pointer">
+                Rechercher
+            </button>
+        </div>
+        <div class="filters">
+            <p class="filterChild">Filtres</p>
+            <div class="filterChild">
+                <button class="filterButton pointer">
+                    <img src="../css/images/icons/money-bill-wave.svg" class="filterIcon">
+                </button>
+                <button class="filterButtonEnd pointer">
+                    Economique
+                </button>
+            </div>
+            <div class="filterChild">
+                <button class="filterButton pointer">
+                    <img src="../css/images/icons/child.svg" class="filterIcon">
+                </button>
+                <button class="filterButtonEnd pointer">
+                    Familial
+                </button>
+            </div>
+            <div class="filterChild">
+                <button class="filterButton pointer">
+                    <img src="../css/images/icons/heart.svg" class="filterIcon">
+                </button>
+                <button class="filterButtonEnd pointer">
+                    Romantique
+                </button>
+            </div>
+            <div class="filterChild">
+                <button class="filterButton pointer">
+                    <img src="../css/images/icons/dog.svg" class="filterIcon">
+                </button>
+                <button class="filterButtonEnd pointer">
+                    Animaux autorisés
+                </button>
+            </div>
+        </div>
+        <div class="info">
+            <div class="infoIcon"><img src="../css/images/icons/info.svg" class="infoIconSize"></div>
+            <p>Plus de 500 logements sont disponnibles dans cette ville</p>
+        </div>
+    </section>
 </body>
 
 </html>
