--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,138 @@
             <p>Plus de 500 logements sont disponnibles dans cette ville</p>
         </div>
     </section>
+    <section class="accomodations">
+        <div class="leftSubsection">
+            <h1 class="leftSubsecTitle">Hébergements à Marseille</h1>
+            <div class="thumbnails">
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Auberge la Cannebière</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">25€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Hôtel du port</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">52€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Hôtel Les mouettes</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">76€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Hôtel de la mer</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">46€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Auberge Le panier</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">23€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                    </div>
+                </div>
+                <div class="thumbnail">
+                    <img src="../css/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="thumbnailImg">
+                    <h3 class="thumbnailTitle">Hôtel chez Amina</h3>
+                    <p class="thumbnailDesc">Nuit à partir de <span class="thumbnailPrice">96€</span></p>
+                    <div class="thumbnailRating">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        <img src="../css/images/icons/star.svg" class="ratingIcon">
+                    </div>
+                </div>
+            </div>
+            <h3 class="showMore">
+                Afficher plus
+            </h3>
+        </div>
+        <div class="mostPopular">
+            <div class="popularTop">
+                <h2 class="popularTitle">Les plus populaires</h2>
+                <img src="../css/images/icons/arrow-trend-up.svg" class="trendIcon">
+            </div>
+            <div class="trendThumbnails">
+                <div class="trendThumbnail">
+                    <img src="../css/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="trendThumbnailImg">
+                    <div class="trendThumbailInfo">
+                        <h3 class="trendThumbnailTitle">Hôtel Le soleil du matin</h3>
+                        <p class="trendThumbnailDesc">Nuit à partir de <span class="trendThumbnailPrice">128€</span></p>
+                        <div class="trendThumbnailRating">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                        </div>
+                    </div>
+                </div>
+                <div class="trendThumbnail">
+                    <img src="../css/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="trendThumbnailImg">
+                    <div class="trendThumbailInfo">
+                        <h3 class="trendThumbnailTitle">Au coeur de l'eau Chambres d'hôtes</h3>
+                        <p class="trendThumbnailDesc">Nuit à partir de <span class="trendThumbnailPrice">71€</span></p>
+                        <div class="trendThumbnailRating">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                        </div>
+                    </div>
+                </div>
+                <div class="trendThumbnail">
+                    <img src="../css/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="trendThumbnailImg">
+                    <div class="trendThumbailInfo">
+                        <h3 class="trendThumbnailTitle">Hôtel Tout bleu et Blanc</h3>
+                        <p class="trendThumbnailDesc">Nuit à partir de <span class="trendThumbnailPrice">68€</span></p>
+                        <div class="trendThumbnailRating">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star.svg" class="ratingIcon">
+                            <img src="../css/images/icons/star-empty.svg" class="ratingIcon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
