third section activities complete

--- a/html/index.html
+++ b/html/index.html
@@ -210,6 +210,53 @@
             </div>
         </div>
     </section>
+    <section>
+
+        <div class="activities">
+            <h1 class="activities-title">Activités a Marseille</h1>
+            <div class="activity">
+                <img src="../css/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port picture" class="activity-img">
+                <div class="activity-info">
+                    <h3 class="activity-title">Vieux port</h3>
+                </div>
+            </div>
+            <div class="activity-dual">
+                <div class="activity card-60">
+                    <img src="../css/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomègues fort picture" class="activity-img">
+                    <div class="activity-info">
+                        <h3 class="activity-title">Fort de Pomègues</h3>
+                    </div>
+                </div>
+                <div class="activity card-35">
+                    <img src="../css/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Frioul's islands picture" class="activity-img">
+                    <div class="activity-info">
+                        <h3 class="activity-title">Îles du Frioul</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="activity">
+                <img src="../css/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Calanques national park picture" class="activity-img">
+                <div class="activity-info">
+                    <h3 class="activity-title">Parc National des Calanques</h3>
+                </div>
+            </div>
+            <div class="activity-dual">
+                <div class="activity card-50">
+                    <img src="../css/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="church Notre Dame de la Garde" class="activity-img">
+                    <div class="activity-info">
+                        <h3 class="activity-title">Notre-Dame-de-la-Garde</h3>
+                    </div>
+                </div>
+                <div class="activity card-50">
+                    <img src="../css/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Longchamp park picture" class="activity-img">
+                    <div class="activity-info">
+                        <h3 class="activity-title">Parc Longchamp</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
