--- a/html/index.html
+++ b/html/index.html
@@ -211,7 +211,6 @@
         </div>
     </section>
     <section>
-
         <div class="activities">
             <h1 class="activities-title">Activités a Marseille</h1>
             <div class="activity">
@@ -256,7 +255,32 @@
             </div>
         </div>
     </section>
-
+    <footer>
+        <div class="footer">
+            <div class="about">
+                <h2 class="about-title">A propos</h2>
+                <ul class="about-list">
+                    <li class="about-list-element">Fonctionnement du site</li>
+                    <li class="about-list-element">Conditions générales de vente</li>
+                    <li class="about-list-element">Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="services">
+                <h2 class="services-title">Nos hébergements</h2>
+                <ul class="services-list">
+                    <li class="services-list-element">Charte qualité</li>
+                    <li class="services-list-element">Soumettre votre hôtel</li>
+                </ul>
+            </div>
+            <div class="help">
+                <h2 class="help-title">Assistance</h2>
+                <ul class="help-list">
+                    <li class="help-list-element">Centre d'aide</li>
+                    <li class="help-list-element">Nous contacter</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
