first section phone responsive

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,8 @@
             </button>
                 <input type="text" class="search-term" placeholder="Marseille, France">
                 <button class="search-button-end pointer">
-                Rechercher
+                <p>Rechercher</p>
+                <img src="../css/images/icons/search.svg" alt="search icon" class="search-icon">
             </button>
             </div>
             <div class="filters">
