--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,9 @@
     <!-- HEADER -->
     <header>
         <img src="../css/images/logo/Reservia.svg" alt="logo reservia" id="logo">
+        <div class="header-signup-mobile">
+            <a href='#'>S'inscrire</a>
+        </div>
         <div class="global-header-nav">
             <div class="header-nav">
                 <a href='#'>Hébergement</a>
