--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </header>
-    <!-- MAIN CONTAIN EVEY SECTION -->
+    <!-- MAIN CONTAIN EVERY SECTION -->
     <main>
         <!-- SEARCHBAR WITH FILTERS SECTION -->
         <section class="search-bar">
