scroll to link smooth

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="global-header-nav">
             <div class="header-nav">
-                <a href='#'>Hébergement</a>
-                <a href='#'>Activités</a>
+                <a href='#accomodations'>Hébergement</a>
+                <a href='#activities'>Activités</a>
             </div>
             <div class="header-signup">
                 <a href='#'>S'inscrire</a>
@@ -89,7 +89,7 @@
             </div>
         </section>
         <!-- ACCOMODATIONS SECTION LEFT -->
-        <section class="accomodations">
+        <section class="accomodations" id="accomodations">
             <div class="left-subsection">
                 <h1 class="left-subsec-title">Hébergements à Marseille</h1>
                 <div class="thumbnails">
@@ -224,7 +224,7 @@
         </section>
         <!-- ACTIVITY SECTION -->
         <section>
-            <div class="activities">
+            <div class="activities" id="activities">
                 <h1 class="activities-title">Activités a Marseille</h1>
                 <div class="activity">
                     <img src="css/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port picture" class="activity-img">
